[tool.poetry]
name = "src"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "*"
uvicorn = "*"
sentence-transformers = "*"
pydantic = "*"
diskcache = "*"
psycopg2-binary = "*"
python-dotenv = "*"
python-louvain = "*"
networkx = "*"
matplotlib = "*"
pyvis = "*"
dotenv = "*"
gunicorn = "*"
hypercorn = "^0.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"